micro-depls/00-core-connectivity-k8s/k8s-config/manifests/05-traefik/traefik-dashboard-oauth2-ingress.yaml
#additionnal Ingress, same host but specific path for oauth2 proxy
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-dashboard-oauth2-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-buffer-size: "8k"
    nginx.ingress.kubernetes.io/proxy-buffers-number: "4"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - traefik-dashboard.((/secrets/cloudfoundry_ops_domain))
      secretName: ssl
  rules:
    - host: traefik-dashboard.((/secrets/cloudfoundry_ops_domain))
      http:
        paths:
          - path: /oauth2
            pathType: ImplementationSpecific
            backend:
              service:
                name: oauth2-proxy
                port:
                  number: 80
